--- a/MVarrior/app/src/main/res/layout/activity_main.xml
+++ b/MVarrior/app/src/main/res/layout/activity_main.xml
@@ -18,5 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_activity_root"
-        android:layout_below="@id/my_toolbar"/>
+        android:layout_below="@id/my_toolbar">
+    </FrameLayout>
 </RelativeLayout>
