--- a/MVarrior/app/src/main/res/layout/main_screen_layout.xml
+++ b/MVarrior/app/src/main/res/layout/main_screen_layout.xml
@@ -10,11 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.mv.dimooon.mvarrior.MainActivity"
-    tools:showIn="@layout/activity_main"
     android:background="@null">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/scrollTextView">
+        <TextView
+            android:id="@+id/helloText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Some Text"/>
+    </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/filesListFragmentContainer"
+        android:layout_below="@+id/scrollTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+    </FrameLayout>
+
 </RelativeLayout>
